apps/plex/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  labels:
    app: plex
spec:
  serviceName: plex
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: gpu.intel.com/device-id.0300-46d1.present #N100 iGPU
                    operator: In
                    values:
                      - "true"
            - weight: 50
              preference:
                matchExpressions:
                  - key: gpu.intel.com/device-id.0300-3e9b.present #i7-9750H iGPU
                    operator: In
                    values:
                      - "true"
            - weight: 25
              preference:
                matchExpressions:
                  - key: intel.feature.node.kubernetes.io/gpu
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/plex/config"
            server: 10.10.20.10
        - name: config-db
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/plex/databases"
            server: 10.10.20.10
        - name: persistent-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/plex/data"
            server: 10.10.20.10
        - name: ephemeral-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/plex/data"
            server: 10.10.20.10
        - name: "plex-litestream"
          configMap:
            name: plex-litestream
        - name: "plex-database"
          emptyDir: {}
      hostNetwork: true
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.43.4.10903-e5521bd8c-ls327@sha256:06e07af2851e6a822e89062b148435495dd794d6d5aaf36247dee05fb3dcc4b8
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
            limits:
              gpu.intel.com/i915: 1
          readinessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 5
          ports:
            - containerPort: 32400
              name: web
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 32469
              name: dlna-tcp
              protocol: TCP
            - containerPort: 5353
              name: bonjour
              protocol: UDP
            - containerPort: 8324
              name: companion
              protocol: TCP
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: persistent-data
              mountPath: /persistent-data
            - name: ephemeral-data
              mountPath: /ephemeral-data
            - name: plex-database
              mountPath: "/config/Library/Application Support/Plex Media Server/Plug-in Support/Databases"
        - name: litestream
          image: litestream/litestream:0.5.17@sha256:4b02b9859a6b6b4087d8b8944e15f7e984bd7957cba322bbeee38b0e27b9656a
          lifecycle:
            postStart:
              exec:
                command: ["chmod", "-R", "777", "/data"]
          args: ["replicate"]
          volumeMounts:
            - name: config-db
              mountPath: "/nfs"
            - name: plex-database
              mountPath: "/data"
            - name: plex-litestream
              mountPath: /etc/litestream.yml
              subPath: litestream.yaml
          ports:
            - name: metrics
              containerPort: 9090
