apps/plex/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.20.53
  selector:
    app: plex
  ports:
    - name: web
      protocol: TCP
      port: 32400
      targetPort: 32400
    - name: dlna-tcp
      protocol: TCP
      port: 32469
      targetPort: 32469
    - name: companion
      protocol: TCP
      port: 8342
      targetPort: 8342
    - name: dlna-udp
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: bonjour
      protocol: UDP
      port: 5353
      targetPort: 5353
    - name: gdm-1
      protocol: UDP
      port: 32410
      targetPort: 32410
    - name: gdm-2
      protocol: UDP
      port: 32412
      targetPort: 32412
    - name: gdm-3
      protocol: UDP
      port: 32413
      targetPort: 32413
    - name: gdm-4
      protocol: UDP
      port: 32414
      targetPort: 32414
---
apiVersion: v1
kind: Service
metadata:
  name: nahueflix
spec:
  type: ExternalName
  externalName: app.plex.tv
